[tool.poetry]
name = "boe"
version = "0.2.0"
description = ""
authors = ["fzhulitov <fzhulitov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"
pandas = "^2.2.0"
importlib-metadata = "*"
lxml = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
